--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
-        "motion": "^11.14.4"
+        "motion": "^11.14.4",
+        "uuid": "^11.0.3"
     }
 }
