--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "motion": "^11.14.4",
+        "react-body-highlighter": "^2.0.5",
         "recharts": "^2.15.0",
         "uuid": "^11.0.3"
     }
